  by calling the new atkNode method addDialogMRA() with 'attributeedit' as its
  argument, which will render an extra button next to the MRA dropdown [Dennis].
+ Made it possible to extend atkTimeZoneAttribute by calling it's methods non-
  static. [Tjeerd]
+ Added atkvardump Smarty modifier. [Boy]
+ Added setLanguage method to atkLanguage. [Ivo]
* atkTmpFile now is able to recursively create the directory structure for
  the temporary file if the directory doesn't already exist. [Peter]
* Fixed debug output in atkTestReporter. [Patrick]
* Fixed non-object error in atkTextAttribute. [Patrick]
* Fixed example test module in atk skel. [Guido]
* Fixed "Cannot convert object to string" error in php 5.2+ in the atkDb
  testcase. [Guido]
* Fixed error in atkNode testcase ($node->m_module should be a string, not an
  object). [Guido]
* Fixed PHP Notice in atkGetUser(). [Guido]
* Added class="btn_ok" to confirm button in atkNode class by default, similar
  to the cancel button, which has class="btn_cancel". Included the class
  "btn_ok" into the style.css of the achievo_modern and steelblue themes.
  [Patrick]
* Fixed memory leak when config_debug is -1. Added debug level -1 to
  comments in config.inc.php [Jeroen,Sandy]
* Fixed italian language file. [Fabio]
* Fixed visibility of attributes on add screen when using a O2M relation.
  In some cases all attributes were always hidden. [Dennis, Guido]
* Columns in a recordlist now have an onclick parameter in the recordlist.tpl
  ($col.onclick). This onclick parameter can be activated with the methods get-
  and setHasClickableRecordList() in atkNode. [Dennis]
* atkTime datatype returns time array by default with leading zero. [Boy]
* atkDateTimeAttribute does not have a AF_SEARCHABLE flag anymore at default.
  [Peter, Dennis]
* atkDurationAttribute now supports the AF_OBLIGATORY flag again. [Ivo]

Changed in ATK 6.0
------------------
+ Added a method to enable/disable the halt_on_error method so database